--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": "app",
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./app/*"]
     },
     "target": "es5",
     "lib": [
