--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "graphql": "^16.8.1",
+    "ioredis": "^5.3.2",
     "minio": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
-    "redis": "^4.6.13"
+    "prom-client": "^15.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
