--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     depends_on:
       - db
       - redis
+      - minio
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4001/health"]
@@ -41,6 +42,19 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    environment:
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=listenmode
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - MINIO_ENDPOINT=minio
+      - MINIO_PORT=9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_URL=http://minio:9000
 
   db:
     image: postgres:15
@@ -71,20 +85,21 @@ services:
       retries: 5
 
   minio:
-    image: minio/minio
+    image: minio/minio:RELEASE.2024-03-21T23-13-43Z
     ports:
       - "9000:9000"
+      - "9001:9001"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
-    command: server /data
+    command: server /data --console-address ":9001"
     networks:
       - app-network
     volumes:
       - minio-data:/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "mc", "ready", "local"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -109,12 +124,17 @@ services:
       - "3001:3000"
     networks:
       - app-network
+    volumes:
+      - grafana-data:/var/lib/grafana
     restart: unless-stopped
 
   prometheus:
     image: prom/prometheus:latest
     ports:
       - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
     networks:
       - app-network
     restart: unless-stopped
@@ -126,3 +146,5 @@ networks:
 volumes:
   postgres-data:
   minio-data:
+  grafana-data:
+  prometheus-data:
