--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "graphql": "^16.8.1",
-    "ioredis": "^5.3.2",
-    "minio": "^8.0.0",
+    "ioredis": "^5.6.1",
+    "minio": "^8.0.5",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.13.0",
+    "pg": "^8.15.5",
     "prom-client": "^15.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
