--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "wavesurfer.js": "^7.9.4"
   },
   "devDependencies": {
     "@types/node": "^20",
