--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.2",
     "graphql": "^16.8.1",
     "lucide-react": "^0.487.0",
     "next": "14.2.3",
